Updated to work with new vscript

--- a/Frota.cfg
+++ b/Frota.cfg
@@ -1,6 +1,6 @@
-dota_local_custom_enable "1"
-dota_local_custom_game "Frota"
-dota_local_custom_map "Frota"
+dota_local_addon_enable "1"
+dota_local_addon_game "Frota"
+dota_local_addon_map "Frota"
 dota_force_gamemode "15"
 update_addon_paths
 dota_wait_for_players_to_load "0"
